Added Script with Predective calling

--- a/src/test/resources/commonData.properties
+++ b/src/test/resources/commonData.properties
@@ -1,5 +1,5 @@
 browser chrome
-url https://www.google.com/
-username agent1
+url https://h63.deepijatel.in/ConVoxCCS/index.php
+username agent3
 password 1234
-station 1001
+station 1003
