Admin Module Added

--- a/src/test/resources/commonData.properties
+++ b/src/test/resources/commonData.properties
@@ -1,5 +1,7 @@
-browser chrome
-url https://h63.deepijatel.in/ConVoxCCS/index.php
+browser firefox
+url http://h77.deepijatel.in/ConVoxCCS/index.php
 username agent3
 password 1234
 station 1003
+admin_Username admin
+admin_Password admin
